// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PrivateRoute > should allow navigation for authenticated access 1`] = `
<div>
  <div>
    PRIVATE
  </div>
</div>
`;

exports[`PrivateRoute > should redirect for unauthenticated access 1`] = `
<div>
  <div
    data-to="/login"
  >
    NAVIGATE
  </div>
</div>
`;
